Add GitHub Actions .deb build workflow and documentation

--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -33,11 +33,7 @@ jobs:
           sudo apt-get install -y \
             libvirt-dev \
             libncurses5-dev \
-            pkg-config \
-            dpkg-dev \
-            debhelper \
-            devscripts \
-            fakeroot
+            pkg-config
 
       - name: Get version
         id: version
